--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,9 @@
                             "input": "public"
                         }],
                         "styles": [
-                            "src/styles.css", "node_modules/primeicons/primeicons.css", "node_modules/primeng/resources/themes/lara-light-indigo/theme.css",
+                            "src/styles.css",
+                            "node_modules/primeicons/primeicons.css",
+                            "node_modules/primeng/resources/themes/lara-dark-indigo/theme.css",
                             "node_modules/primeng/resources/primeng.min.css"
                         ],
                         "scripts": []
